src/OpenCvSharpExtern/core_Mat.h

CVAPI(void) core_Mat_assignment_FromMat(cv::Mat *self, cv::Mat *newMat)
{
    *self = *newMat;
}
CVAPI(void) core_Mat_assignment_FromMatExpr(cv::Mat *self, cv::MatExpr *newMatExpr)
{
    *self = *newMatExpr;
}
CVAPI(void) core_Mat_assignment_FromScalar(cv::Mat *self, MyCvScalar scalar)
{
    *self = cpp(scalar);
}
CVAPI(void) core_Mat_IplImage(cv::Mat *self, IplImage *outImage)
{
    *outImage = IplImage();
    IplImage inImage = (IplImage)(*self);
    memcpy(outImage, &inImage, sizeof(IplImage));
}
CVAPI(void) core_Mat_IplImage_alignment(cv::Mat *self, IplImage **outImage)
{
    // キャストの結果を参考に使う.
    // メモリ管理の問題から、直接は使わない.
    IplImage dummy = (IplImage)(*self);
    // alignmentをそろえる
    IplImage *img = cvCreateImage(cvSize(dummy.width, dummy.height), dummy.depth, dummy.nChannels);
    int height = img->height;
    size_t sstep = self->step;
    size_t dstep = img->widthStep;
    for (int i = 0; i < height; ++i)
    {
        char *dp = img->imageData + (dstep * i);
        char *sp = (char*)(self->data) + (sstep * i);
        memcpy(dp, sp, sstep);
    }
    *outImage = img;
}
CVAPI(void) core_Mat_CvMat(cv::Mat *self, CvMat *outMat)
{
    *outMat = CvMat();
    CvMat inMat = (CvMat)(*self);
    memcpy(outMat, &inMat, sizeof(CvMat));
}
CVAPI(cv::MatExpr*) core_abs_Mat(cv::Mat *m)
{
    cv::MatExpr ret = cv::abs(*m);
    return new cv::MatExpr(ret);
}
CVAPI(int) core_Mat_nSetB(cv::Mat *obj, int row, int col, uchar *vals, int valsLength)
{
    return internal_Mat_set<char>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetS(cv::Mat *obj, int row, int col, short *vals, int valsLength)
{
    return internal_Mat_set<short>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetI(cv::Mat *obj, int row, int col, int *vals, int valsLength)
{
    return internal_Mat_set<int>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetF(cv::Mat *obj, int row, int col, float *vals, int valsLength)
{
    return internal_Mat_set<float>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetD(cv::Mat *obj, int row, int col, double *vals, int valsLength)
{
    int rest = ((obj->rows - row) * obj->cols - col) * obj->channels();
    int count = valsLength;
    if (count > rest)
        count = rest;
    int res = count;
    double* src = vals;
    int r, c;
    for (c = col; c<obj->cols && count > 0; c++)
    {
        switch (obj->depth()) 
        {
        case CV_8U:  internal_set_item<uchar>(obj, row, c, src, count); break;
        case CV_8S:  internal_set_item<schar>(obj, row, c, src, count); break;
        case CV_16U: internal_set_item<ushort>(obj, row, c, src, count); break;
        case CV_16S: internal_set_item<short>(obj, row, c, src, count); break;
        case CV_32S: internal_set_item<int>(obj, row, c, src, count); break;
        case CV_32F: internal_set_item<float>(obj, row, c, src, count); break;
        case CV_64F: internal_set_item<double>(obj, row, c, src, count); break;
        }
    }
    for (r = row + 1; r < obj->rows && count > 0; r++)
    {
        for (c = 0; c < obj->cols && count > 0; c++)
        {
            switch (obj->depth())
            {
            case CV_8U:  internal_set_item<uchar>(obj, r, c, src, count); break;
            case CV_8S:  internal_set_item<schar>(obj, r, c, src, count); break;
            case CV_16U: internal_set_item<ushort>(obj, r, c, src, count); break;
            case CV_16S: internal_set_item<short>(obj, r, c, src, count); break;
            case CV_32S: internal_set_item<int>(obj, r, c, src, count); break;
            case CV_32F: internal_set_item<float>(obj, r, c, src, count); break;
            case CV_64F: internal_set_item<double>(obj, r, c, src, count); break;
            }
        }
    }
    return res;
}
CVAPI(int) core_Mat_nSetVec3b(cv::Mat *obj, int row, int col, cv::Vec3b *vals, int valsLength)
{
    return internal_Mat_set<cv::Vec3b>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nSetPoint(cv::Mat *obj, int row, int col, cv::Point *vals, int valsLength)
{
    return internal_Mat_set<cv::Point>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetB(cv::Mat *obj, int row, int col, uchar *vals, int valsLength)
{
    return internal_Mat_get<char>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetS(cv::Mat *obj, int row, int col, short *vals, int valsLength)
{
    return internal_Mat_get<short>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetI(cv::Mat *obj, int row, int col, int *vals, int valsLength)
{
    return internal_Mat_get<int>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetF(cv::Mat *obj, int row, int col, float *vals, int valsLength)
{
    return internal_Mat_get<float>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetD(cv::Mat *obj, int row, int col, double *vals, int valsLength)
{
    return internal_Mat_get<double>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetVec3b(cv::Mat *obj, int row, int col, cv::Vec3b *vals, int valsLength)
{
    return internal_Mat_get<cv::Vec3b>(obj, row, col, (char*)vals, valsLength);
}
CVAPI(int) core_Mat_nGetPoint(cv::Mat *obj, int row, int col, cv::Point *vals, int valsLength)
{
    return internal_Mat_get<cv::Point>(obj, row, col, (char*)vals, valsLength);
}